--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <style href="miEstilo.css">
+  
 <body>
     <h1>Aqui iria el Titulo de la Pagina</h1>
     <p>Esto es un parrafo</p>
     <p>Esto es un segundo parrafo</p>
+    <p>esto es otro parrafo
+        </p>
 </body>
 </html>
  
